--- a/Course/HTML and CSS/Space Station Website Drill/css/shared.css
+++ b/Course/HTML and CSS/Space Station Website Drill/css/shared.css
@@ -15,6 +15,12 @@ body {
 	background-color: #fff;
 }
 
+p {
+    font-weight: 300;
+    line-height: 30px;
+    padding-bottom: 15px;
+}
+
 footer,
 nav {
 	display: block;
